# xmlreader

./: .gitignore  AUTHORS  Makefile.am  Makefile.decl  README  autogen.sh  configure.ac  xml-reader.pc.in
doc/: api-design.txt
doc/reference/: Makefile.am  xml-reader-docs.sgml  xml-reader-sections.txt  xml-reader.types
xml-reader/: Makefile.am  xml-reader.c  xml-reader.h
xml-reader/tests/: Makefile.am  test-reader.c
